Fix change text alignment

--- a/power-rankings/src/styles/Rankings.css
+++ b/power-rankings/src/styles/Rankings.css
@@ -101,6 +101,6 @@
 }
 
 .change-text {
-    text-align: right;
+    text-align: left;
     padding-right: 15px;
 }
